--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ embedded-hal-async = "1.0.0-rc.3"
 embedded-hal-bus = { version = "0.1.0-rc.3", features = ["async"] }
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 embedded-storage = { version = "0.3" }
-static_cell = "2"
+static_cell = { version = "2", features = ["nightly"]}
 portable-atomic = { version = "1.5", features = ["critical-section"] }
 log = "0.4"
 pio-proc = "0.2"
